--- a/src/styles/SocialMediaLinks.css
+++ b/src/styles/SocialMediaLinks.css
@@ -3,7 +3,7 @@
   flex-wrap: wrap;
 }
 .link {
-  padding: 0px 10px;
+  padding-left: 20px;
   margin-bottom: 0px;
   color: grey;
 }
